--- a/Views/Shared/_Form.cshtml
+++ b/Views/Shared/_Form.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Todo;
 
-<form asp-action="Insert" id="form-action" method="post" role="form">
+<form asp-action="CreateTask" id="form-action" method="post" role="form" asp-controller="Home">
     <div asp-validation-summary="All"></div>
     <label asp-for="Name"></label>
     <input asp-for="Id" type="hidden"/>
