Front end for the app is completed.

--- a/Views/Shared/_Form.cshtml
+++ b/Views/Shared/_Form.cshtml
@@ -6,5 +6,5 @@
     <input asp-for="Id" type="hidden"/>
     <input asp-for="Name"/>
     <span asp-validation-for="Name"></span>
-    <input type="submit" id="from-button" value="ADD"/>
+    <input type="submit" id="from-button" value="ADD" class="btn btn-success"/>
 </form>
