--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
             @RenderBody()
         </main>
         <partial name="_Form"/>
-        <div class="container">
+        <div>
             <partial name="_TaskList"/>
         </div>
     </div>
