--- a/Views/Shared/_TaskList.cshtml
+++ b/Views/Shared/_TaskList.cshtml
@@ -1,35 +1,32 @@
-﻿
+﻿@model TodoViewModel;
+
 <div class="card-body">
     @{
         var count = 0;
     }
-
     <table class="table table-sm table-striped table-hover">
-        <tr>
-            <th class="text-center"> # </th>
-            <th class="text-center"> Task </th>
-            <th class="text-center"> </th>
-            <th class="text-center"> </th>
-        </tr>
-
-        @foreach (var task in ViewBag.Tasks)
-        {
-            count++;
-            if (task != null)
+        <thead>
+            <tr>
+                <th class="text-center" scope="col"> # </th>
+                <th class="text-center" scope="col"> Task </th>
+                <th class="text-center" scope="col"> </th>
+                <th class="text-center" scope="col"> </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var task in Model.Todos)
             {
-                <tr>
-                    <td class="text-center"> @count </td>
-                    <td class="text-center"> @task.Name </td>
-                    <td class="text-center">
-                        <a asp-action="EditTask" asp-controller="Home"
-                   asp-route-id="@task.Id" class="btn btn-primary"> Edit </a>
-                    </td>
-                    <td class="text-center">
-                        <a asp-action="DeleteTask" asp-controller="Home"
-                   asp-route-id="@task.Id" class="btn btn-danger"> Delete </a>
-                    </td>
-                </tr>
+                count++;
+                if (task != null)
+                {
+                    <tr>
+                        <td class="text-center" scope="row"> @count </td>
+                        <td class="text-center"> @task.Name </td>
+                        <td class="text-center"></td>
+                        <td class="text-center"></td>
+                    </tr>
+                }
             }
-        }
+        </tbody>
     </table>
 </div>
