--- a/Views/Shared/_TaskList.cshtml
+++ b/Views/Shared/_TaskList.cshtml
@@ -26,7 +26,7 @@
                             <input type="submit" class="btn btn-primary" value="Update"/>
                         </td>
                         <td class="text-center">
-                            <input type="submit" class="btn btn-danger" value="Delete"/>
+                            <input type="submit" class="btn btn-danger" value="Delete" onClick="deleteTask(@task.Id)"/>
                         </td>
                     </tr>
                 }
