--- a/Views/Shared/_TaskList.cshtml
+++ b/Views/Shared/_TaskList.cshtml
@@ -23,7 +23,7 @@
                         <td class="text-center"> @count </td>
                         <td class="text-center"> @task.Name </td>
                         <td class="text-center">
-                            <input type="submit" class="btn btn-primary" value="Edit" onClick="updateTask(@task.Id)"/>
+                            <input type="submit" class="btn btn-primary" value="Edit" onClick="populateForm(@task.Id)"/>
                         </td>
                         <td class="text-center">
                             <input type="submit" class="btn btn-danger" value="Delete" onClick="deleteTask(@task.Id)"/>
